Fixed onTouch highlight on mobiles

--- a/src/memory-mosaic/style/index.scss
+++ b/src/memory-mosaic/style/index.scss
@@ -86,6 +86,13 @@ $pink: #FD297D;
     align-items: center;
     font-size: 3em;
     z-index: 3;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     // padding: 1px;
 
     &:first-child {
